--- a/hw5/pages/index.html
+++ b/hw5/pages/index.html
@@ -65,29 +65,29 @@
             </g>
           </svg>
         </h1>
-        <ul>
-          <li class="d-flex align-items-center mb-26px">
+        <ul class="p-0">
+          <li class="d-flex align-items-center mb-26px ps-32px">
             <span class="material-symbols-outlined me-3">insert_chart</span>
             <span class="text-grey lato-regular">Dashboard</span>
           </li>
-          <li class="d-flex align-items-center mb-26px">
+          <li class="d-flex align-items-center mb-26px ps-32px">
             <span class="material-symbols-outlined me-3">forum</span>
             <span class="text-grey lato-regular">Question</span>
           </li>
-          <li class="d-flex align-items-center mb-26px">
+          <li class="d-flex align-items-center mb-26px ps-32px">
             <span class="material-symbols-outlined me-3">assignment</span>
             <span class="text-grey lato-regular">Assignment</span>
           </li>
-          <li class="d-flex align-items-center mb-26px">
+          <li class="d-flex align-items-center mb-26px ps-32px">
             <span class="material-symbols-outlined me-3">move_group</span>
             <span class="text-grey lato-regular">Course</span>
           </li>
-          <li class="d-flex align-items-center mb-26px">
-            <span class="material-symbols-outlined me-3">group</span>
-            <span class="text-grey lato-regular">Admin</span>
+          <li class="d-flex align-items-center mb-26px ps-32px local-page-border">
+            <span class="material-symbols-outlined me-3 admin-color">group</span>
+            <span class="text-grey lato-regular admin-color">Admin</span>
           </li>
           <li class="d-flex align-items-center">
-            <span class="material-symbols-outlined me-3">settings</span>
+            <span class="material-symbols-outlined me-3 ps-32px">settings</span>
             <span class="text-grey lato-regular">Settings</span>
           </li>
         </ul>
@@ -102,11 +102,15 @@
     </aside>
     <section class="section-list flex-grow-1">
       <div class="container">
-        <header>
-          <div class="d-flex align-items-center section-header-py">
+        <header class="d-flex align-items-center justify-content-between section-header-py">
+          <div class="d-flex align-items-center">
             <h2 class="lato-bold fs-4 mb-0 me-48px">Admin</h2>
             <span class="material-symbols-outlined me-2 add-icon-color">add</span>
             <span class="lato-bold text-grey">Add New Admin</span>
+          </div>
+          <div class="d-flex pe-2">
+            <span class="material-symbols-outlined me-4">search</span>
+            <span class="material-symbols-outlined">notifications_active</span>
           </div>
         </header>
         <table class="table table-hover mb-0">
